Fix long URLs by forcing wrapping
- Add breakable class to all urls to force wrapping at smaller page widths

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -134,6 +134,12 @@ main a {
   text-decoration: underline;
 }
 
+// Force long URLs to break
+.breakable {
+  word-break: break-all;
+  display: inline-block;
+}
+
 /* ==========================================================================
    Page headers
    ========================================================================== */
